--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phonegap-plugin-push",
-  "description": "Register and receive push notifications.",
+  "name": "vb-plugin-push",
+  "description": "Register and receive push notifications - This is fork of phonegap-plugin-push to handle some android push notification error",
   "types": "./types/index.d.ts",
   "version": "2.2.3",
   "homepage": "http://github.com/phonegap/phonegap-plugin-push#readme",
@@ -12,7 +12,7 @@
     "url": "https://github.com/phonegap/phonegap-plugin-push/issues"
   },
   "cordova": {
-    "id": "phonegap-plugin-push",
+    "id": "vb-plugin-push",
     "platforms": [
       "ios",
       "android",
