--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "vb-plugin-push",
   "description": "Register and receive push notifications - This is fork of phonegap-plugin-push to handle some android push notification error",
   "types": "./types/index.d.ts",
-  "version": "2.2.4",
-  "homepage": "http://github.com/phonegap/phonegap-plugin-push#readme",
+  "version": "2.2.5",
+  "homepage": "https://github.com/guyeol/phonegap-plugin-push#readme",
   "repository": {
     "type": "git",
-    "url": "git://github.com/phonegap/phonegap-plugin-push.git"
+    "url": "git://github.com/guyeol/phonegap-plugin-push.git"
   },
   "bugs": {
-    "url": "https://github.com/phonegap/phonegap-plugin-push/issues"
+    "url": "https://github.com/guyeol/phonegap-plugin-push/issues"
   },
   "cordova": {
     "id": "vb-plugin-push",
